tests/transpiler/x/clj/list_nested_assign.clj
;; Generated by Mochi v0.10.31 on 2025-07-20 09:41:26 GMT+7
(ns main)

(def matrix [[1 2] [3 4]])

(defn -main []
  (def matrix 5)
  (println (nth (nth matrix 1) 0)))

(-main)
